--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -4,18 +4,24 @@
 #   The weight parameter defines the order that the links will appear in.
 
 main:
-  - name: 关于
-    url: '#关于'
+  - name: Home
+    url: '#about'
     weight: 10
-  - name: 技能
-    url: '#技能'
+  - name: Posts
+    url: '#posts'
     weight: 20
-  - name: 学习经历
-    url: '#学习经历'
+  - name: Projects
+    url: '#projects'
     weight: 30
-  - name: 学位
-    url: '#学位'
+  - name: Talks
+    url: '#talks'
     weight: 40
+  - name: Publications
+    url: '#featured'
+    weight: 50
+  - name: Contact
+    url: '#contact'
+    weight: 60
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
